[metadata]
name = rt_core
version = 3.0.0
author = Aleksei Zosimov
author_email = lesha.spb@gmail.com
description = Step_factor in features replaced with period
long_description = file: README.md
long_description_content_type = text/markdown
url = https://bitbucket.org/zosimovaa/rt_core/src/master/
project_urls =
    Bug Tracker =  https://bitbucket.org/zosimovaa/rt_core/src/master/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
